Fixed sizing issues on small phones

--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ span.num {
   width: 100%;
   display: grid;
   place-items: center;
-  font-size: 4em;
+  font-size: 5em;
   box-shadow: var(--color-shadow);
   border-radius: 0.1em;
 }
@@ -108,10 +108,34 @@ span.text {
 
 /* Media Queries */
 
+@media (max-width: 600px) {
+  /* Shrink .wrapper by 20%*/
+  .wrapper {
+    transform: translate(-50%, -50%) scale(0.95);
+    overflow: hidden;
+  }
+  span.text {
+    bottom: 8px;
+  }
+  span.num {
+    backdrop-filter: blur(90px);
+    font-size: 60px;
+  }
+}
+
+@media (max-width: 500px) {
+  span.num {
+    font-size: 54px;
+  }
+  span.text {
+    font-size: 1em;
+  }
+}
+
 @media (max-width: 434px) {
   /* Shrink .wrapper by 20%*/
   .wrapper {
-    transform: translate(-50%, -50%) scale(0.8);
+    transform: translate(-50%, -50%) scale(0.85);
     overflow: hidden;
   }
   span.text {
@@ -128,14 +152,14 @@ span.text {
     font-size: 38px;
   }
   span.text {
-    font-size: 0.9em;
+    font-size: 16px;
   }
 }
 @media (max-width: 375px) {
   span.num {
-    font-size: 33px;
+    font-size: 35px;
   }
   span.text {
-    font-size: 0.9em;
+    font-size: 13px;
   }
 }
